--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,3 +5,9 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=INSIRA_AQUI_SEU_STORAGE_BUCKET
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=INSIRA_AQUI_SEU_MESSAGING_SENDER_ID
 REACT_APP_FIREBASE_APP_ID=INSIRA_AQUI_SUA_APP_ID
 REACT_APP_FIREBASE_MEASUREMENT_ID=INSIRA_AQUI_SUA_MEASUREMENT_ID
+
+REACT_APP_FIREBASE_CATEGORY_ID1=INSIRA_AQUI_SUA_CATEGORIA_ID1
+REACT_APP_FIREBASE_CATEGORY_ID2=INSIRA_AQUI_SUA_CATEGORIA_ID2
+REACT_APP_FIREBASE_CATEGORY_ID3=INSIRA_AQUI_SUA_CATEGORIA_ID3
+REACT_APP_FIREBASE_CATEGORY_ID4=INSIRA_AQUI_SUA_CATEGORIA_ID4
+REACT_APP_FIREBASE_CATEGORY_ID5=INSIRA_AQUI_SUA_CATEGORIA_ID5
