--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "react-video-thumbnail": "^0.1.3",
     "serviceworker": "^0.1.7",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4",
