feat(Payment; Backend): Cria a estrutura e a rota para pagamentos no backend.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,9 @@ JWT_SECRET=suaSenhaSecreta
 
 PORT= # porta da aplicação
 
+#### API MERCADO LIVRE
+MERCADOPAGO_ACCESS_TOKEN=seuAccessToken
+
 #### FIREBASE
 FIREBASE_TYPE=
 FIREBASE_PROJECT_ID=
