--- a/backend/package.json
+++ b/backend/package.json
@@ -45,6 +45,7 @@
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "mercadopago": "^1.5.17",
     "morgan": "^1.10.0",
     "multer": "1.4.4",
     "readline-sync": "^1.4.10",
