feat(Subscription): Cria a estrutura inicial da rota subscription do frontend

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,4 @@
+#### Firebase config ####
 REACT_APP_FIREBASE_API_KEY=INSIRA_AQUI_SUA_API_KEY
 REACT_APP_FIREBASE_AUTH_DOMAIN=INSIRA_AQUI_SEU_AUTH_DOMAIN
 REACT_APP_FIREBASE_PROJECT_ID=INSIRA_AQUI_SEU_PROJECT_ID
@@ -6,8 +7,12 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=INSIRA_AQUI_SEU_MESSAGING_SENDER_ID
 REACT_APP_FIREBASE_APP_ID=INSIRA_AQUI_SUA_APP_ID
 REACT_APP_FIREBASE_MEASUREMENT_ID=INSIRA_AQUI_SUA_MEASUREMENT_ID
 
+#### Firebase categories ####
 REACT_APP_FIREBASE_CATEGORY_ID1=INSIRA_AQUI_SUA_CATEGORIA_ID1
 REACT_APP_FIREBASE_CATEGORY_ID2=INSIRA_AQUI_SUA_CATEGORIA_ID2
 REACT_APP_FIREBASE_CATEGORY_ID3=INSIRA_AQUI_SUA_CATEGORIA_ID3
 REACT_APP_FIREBASE_CATEGORY_ID4=INSIRA_AQUI_SUA_CATEGORIA_ID4
 REACT_APP_FIREBASE_CATEGORY_ID5=INSIRA_AQUI_SUA_CATEGORIA_ID5
+
+#### Mercado Pago ####
+REACT_APP_MERCADOPAGO_PUBLIC_KEY=INSIRA_AQUI_SUA_PUBLIC_KEY
