--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "dotenv-webpack": "^8.0.1",
     "firebase": "^9.23.0",
     "firebase-admin": "^11.5.0",
+    "formik": "^2.4.3",
     "path-browserify": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -24,7 +25,8 @@
     "serviceworker": "^0.1.7",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.75.0"
+    "webpack": "^5.75.0",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
