feat(Mercado Pago SDK): Configura o meio de pagamento pela API do Mercado Pago.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,8 +3,8 @@ JWT_SECRET=suaSenhaSecreta
 
 PORT= # porta da aplicação
 
-#### API MERCADO LIVRE
-MERCADOPAGO_ACCESS_TOKEN=seuAccessToken
+#### API MERCADO PAGO CHAVE PRIVADA
+MERCADOPAGO_ACCESS_TOKEN=suaChavePrivada
 
 #### FIREBASE
 FIREBASE_TYPE=
