improvement(Subscription): Cria a lógica para pagamento com Pix no backend, insere uma descrição no front para facilitar o reconhecimento da compra mais facilmente pelo comprador.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -17,3 +17,4 @@ REACT_APP_FIREBASE_CATEGORY_ID5=INSIRA_AQUI_SUA_CATEGORIA_ID5
 #### Mercado Pago ####
 REACT_APP_MERCADOPAGO_PUBLIC_KEY=INSIRA_AQUI_SUA_PUBLIC_KEY
 REACT_APP_SUBSCRIPTION_VALUE=INSIRA_AQUI_O_VALOR_DA_ASSINATURA
+REACT_APP_SUBSCRIPTION_DESCRIPTION=INSIRA_AQUI_A_DESCRICAO_DA_ASSINATURA
