--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.23.0",
     "firebase-admin": "^11.5.0",
     "formik": "^2.4.3",
+    "framer-motion": "^10.15.2",
     "path-browserify": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
