--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,8 @@
     "start:prod": "NODE_ENV=production npm run build && serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "eslintConfig": {
     "extends": [
