refactor(Frontend): Refatora o código, apagando linhas desnecessárias e explicando a utilidade das funções; Adiciona ao README a explicação da variável da API Url.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
 PORT= # porta da aplicação
 #### CORS CONFIGURATION FOR PRODUCTION
-FRONTEND_URL= # https://meusite.com - Substitua por seu próprio endereço do frontend
+FRONTEND_URL=https://meusite.com # Substitua por seu próprio endereço do backend
 
 #### API MERCADO PAGO CHAVE PRIVADA
 MERCADOPAGO_ACCESS_TOKEN=suaChavePrivada
