--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,6 @@
+#### API Url ####
+REACT_APP_API_URL=https://meusite.com # Substitua por seu próprio endereço do backend
+
 #### Firebase config ####
 REACT_APP_FIREBASE_API_KEY=INSIRA_AQUI_SUA_API_KEY
 REACT_APP_FIREBASE_AUTH_DOMAIN=INSIRA_AQUI_SEU_AUTH_DOMAIN
